asgn and redux half data enter init

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,6 +12,8 @@ target 'NewError1' do
     :hermes_enabled => false
   )
 
+  pod 'react-native-image-picker', :path => '../node_modules/react-native-image-picker'
+
   target 'NewError1Tests' do
     inherit! :complete
     # Pods for testing
