--- a/package.json
+++ b/package.json
@@ -13,14 +13,21 @@
     "@react-native-async-storage/async-storage": "^1.15.11",
     "@react-native-firebase/app": "^13.0.1",
     "@react-native-firebase/firestore": "^13.0.1",
+    "@react-native-firebase/storage": "^13.0.1",
+    "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "axios": "^0.24.0",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-crop-picker": "^0.37.2",
+    "react-native-reanimated": "^2.2.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
-    "react-redux": "^7.2.6"
+    "react-native-vector-icons": "^9.0.0",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
